@@ -96,6 +96,8 @@ table {
   --rlh3: 1.375rem;
   --rlh4: 1.5rem;
   --rlh5: 2rem;
+  --lsh: -0.025em;
+  --lsd: -0.05em;
   --br1: 0.125rem;
   --br2: 0.25rem;
   --br3: 0.5rem;
@@ -373,6 +375,14 @@ hr {
 
 .rlh5 {
   line-height: var(--rlh5);
+}
+
+.lsh {
+  letter-spacing: var(--lsh);
+}
+
+.lsd {
+  letter-spacing: var(--lsd);
 }
 
 .bold {
