@@ -52,6 +52,9 @@
   --rlh4: 1.5rem;   /* 24 */
   --rlh5: 2rem;     /* 32 */
 
+  --lsh: -0.025em;
+  --lsd: -0.050em;
+
   --br1: 0.125rem;  /*  2 */
   --br2: 0.25rem;   /*  4 */
   --br3: 0.5rem;    /*  8 */
