@@ -2,6 +2,7 @@
 
   * (margin) m[xy]0(25|5)
   * (type) --text-decoration-thickness
+  * (type) letter-spacing .lsh, .lsd
   * (div) --border-width, --border-color
   * (copy) depreciate global variables
 
